# ferrischart

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs
src/charts/: mod.rs  scatter.rs
src/math/: distance.rs  mod.rs
