[package]
name = "ferrischart"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "Build informative graphs in Rust"
repository = "https://github.com/justanotherbyte/ferrischart"
readme = "README.md"
keywords = ["graphs", "graph", "chart", "charts", "matplotlib"]
categories = ["graphics", "mathematics", "multimedia::images", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
imageproc = "0.23.0"
rand = "0.8.5"
rusttype = "0.9.3"
